odio-api (0.6.0) trixie; urgency=low

  [Dashboard Integrated & Responsive]

  * Built-in web UI at /ui (localhost:8018/ui)
  * htmx + tailwind css with custom build
  * 100% local, no external depedency
  * Responsive design
  * Auto-refresh only when tab visible and section uncollapsed
  * Dynamic columns based on backend capabilities
  * Cover art support for MPRIS metadata
  * Per-player & per-client volume controls
  * Tested on amd64 (HTPC) and armhf (RPi Model B 2012)


 -- Mathieu Réquillart <mathieu.requillart@gmail.com>  Fri, 13 Feb 2026 15:00:00 +0000


odio-api (0.5.0) trixie; urgency=high


  * Add power managment backend via login1 dbus interface
  * Manage reboot and poweroff
  * fully configurable, disabled by default


 -- Mathieu Réquillart <mathieu.requillart@gmail.com>  Mon, 16 Feb 2026 18:00:00 +0000


odio-api (0.4.0) trixie; urgency=high

  [ Major security and usability improvements ]
  * systemd: enforce strict permission validation on mutating operations;
    introduce safe handler patterns and comprehensive tests to mitigate
    privilege escalation risks
  * Introduce zeroconf (Avahi/mDNS) support for automatic discovery of the API
    on local networks odio-api.local:8018
  * Change default listen port to 8018 to avoid privileged port issues and reduce conflict and
    accidental exposure risks.
  * Add new command-line flags: --config <path> and --version
  * Correctly handle and report systemd configuration errors
  * Disable systemd integration by default (must now be explicitly enabled in config)


 -- Mathieu Réquillart <mathieu.requillart@gmail.com>  Fri, 13 Feb 2026 15:00:00 +0000


odio-api (0.3.3) trixie; urgency=low

  Fix "headless" mode

  * fix systemd utmp detection
  * fix handling of long transitional unit states

 -- Mathieu Réquillart <mathieu.requillart@gmail.com>  Sat, 07 Feb 2026 15:30:00 +0000


odio-api (0.3.2) trixie; urgency=low

  Add /server route
