@@ -25,6 +25,12 @@ systemd:
     - snapclient.service
     - spotifyd.service
 
+power:
+  enabled: false
+  capabilities:
+    poweroff: true
+    reboot: true
+
 pulseaudio:
   enabled: true
 
